[project]
name = "action-poetry-update"
version = "0.1.0"
description = "GitHub action for updating Python dependencies"
authors = [{ name = "moneymeets", email = "service@moneymeets.com" }]
requires-python = "~=3.14.0"

[tool.poetry]
packages = [
    { include = "actions_helper" }
]

[project.scripts]
actions_helper = 'actions_helper.main:cli'

[tool.poetry.dependencies]
click="*"
pygithub = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
pytest-cov = "*"

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
